appId: com.metheorium.mobile
---
- runFlow: releaseBootstrap.yaml
- scrollUntilVisible:
    element:
      text: "Continue as Guest"
    direction: DOWN
    timeout: 20000
    optional: true
- tapOn: "Continue as Guest"
- extendedWaitUntil:
    visible:
      id: "S-200"
    timeout: 120000
