appId: com.metheorium.mobile
---
- runFlow: ../_bootstrap/guestMain.yaml
- tapOn: "Account"
- extendedWaitUntil:
    visible:
      id: "S-700"
    timeout: 15000
- assertVisible:
    id: "S-700"
